# testpilot

./: .gitignore  README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
testpilot/: key.py  main.py  world.py  world_test.py
testpilot/agent/: base.py
testpilot/cli/: generate.py  key.py
testpilot/utils/: connector.py  parser.py
tests/: test_key.py
